[package]
name = "conform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
clap = { version = "4.4.8", features = ["derive"] }
cxx = "1.0.110"
base64 = "0.21.5"
indoc = "2.0.4"
auto_enums = "0.8.3"
anyhow = "1.0.75"
protobuf = "3.3.0"
protobuf-json-mapping = "3.3.0"
diff = "0.1.13"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[build-dependencies]
cmake = "0.1"
autocxx-build = "0.26.0"
protobuf-codegen = "3.3.0"
